--- a/service.yaml
+++ b/service.yaml
@@ -1,16 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: httpbin
+  name: httpbin-service
   labels:
     app: httpbin
 spec:
-  # Expose the service only within the cluster.
-  type: ClusterIP
   selector:
     app: httpbin
   ports:
   - port: 80
     targetPort: 80
     protocol: TCP
-    name: http
+    name: http-main
+  type: ClusterIP
